--- a/index.html
+++ b/index.html
@@ -5,14 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
 </head>
 <body>
-    <h1>Welcome To</h1>
-    <h1>Peter Parker World</h1>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+        <h1><span class="name">Peter Parker</span> World</h1>
+        <h3>Build Climber and Train Stopper</h2>
+        <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+        <a class="button" target="_blank" href="https://www.linkedin.com/in/afsana-ara-bristy-244725205/">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png">
+        </div>
+    </section>
+    <br>
+    <br>
+    <br>
+    
+
+    <section class="dream-area">
+        <div class="second-part">
+            <img src="images/jhankar2.png">
+
+        </div>
+        <div class="second-part">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="download" target="_blank" href="https://www.linkedin.com/in/afsana-ara-bristy-244725205/">Download Resume</a>
+        </div>
+    </section>
+
     
 </body>
 </html>
