--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
-        <h1><span class="name">Peter Parker</span> World</h1>
+        <h1><span class="name">ARA's</span> World</h1>
         <h3>Build Climber and Train Stopper</h2>
         <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
         <a class="button" target="_blank" href="https://www.linkedin.com/in/afsana-ara-bristy-244725205/">Hire Me</a>
